Add validation to ViatorActivityDetailDTO